hphp/hack/test/typecheck/reactive/print_in_rx2.php
<?hh // strict

<<__Rx>>
function f(): void {
  // should be error
  echo 1;
}
